# rust-learning

./: README.md
3.1-guessing-game/: Cargo.toml
3.1-guessing-game/src/: main.rs
3.2-dining-philosophers/: README.md
3.2-dining-philosophers/series-version/src/: main.rs
4.2-testing/: Cargo.toml  README.md
4.2-testing/src/: lib.rs
4.2-testing/tests/: lib.rs
4.3-conditional-compilation/: Cargo.toml
4.3-conditional-compilation/src/: main.rs
4.4-documentation/: Cargo.toml
4.4-documentation/src/: lib.rs
4.5-iterators/: Cargo.toml
4.5-iterators/src/: main.rs
4.6-concurrency/: Cargo.toml
4.6-concurrency/src/: channels.rs  main.rs
4.7-error-handling/: Cargo.toml  file.txt
4.7-error-handling/src/: main.rs
4.8-choosing-your-guarantees/: Cargo.toml
4.8-choosing-your-guarantees/src/: main.rs
dining_philosophers_concurrent/: Cargo.toml
dining_philosophers_concurrent/src/: main.rs
embed/: Cargo.toml  README.md  embed.js  embed.py  embed.rb
embed/src/: lib.rs
guessing_game/: README.md
